the second commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
 
 [project.scripts]
 devhub = "devhub.main:main"
-devhub-mcp = "devhub.mcp_server:main"
+devhub-mcp = "devhub.mcp_server:cli_main"
 
 [project.urls]
 Homepage = "https://github.com/hakimjonas/devhub"
