--- a/pyproject.toml
+++ b/pyproject.toml
@@ -157,9 +157,7 @@ show_column_numbers = true
 pretty = true
 color_output = true
 error_summary = true
-files = ["src/devhub"]
-# Ensure ad-hoc CLI like `mypy .` passes
-exclude = "^(tests/|htmlcov/|review-bundles/|homebrew/|docs/)"
+files = ["src/devhub", "tests"]
 
 [[tool.mypy.overrides]]
 module = "tests.*"
@@ -167,7 +165,6 @@ disallow_any_decorated = false
 disallow_untyped_defs = false
 disallow_incomplete_defs = false
 disallow_untyped_decorators = false
-ignore_errors = true
 
 [tool.pyright]
 pythonVersion = "3.13"
