Add twine to dev dependencies for CI build step
- CI build step uses 'uv run twine check dist/*' but twine wasn't installed
- Add twine>=6.0.0 to dev-dependencies for package verification
- Fixes 'Failed to spawn: twine' error in build job

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ dev-dependencies = [
     "typos>=1.35.5",
     "vulture>=2.14", # Dead code detection
     "refurb>=2.1.0", # Modernization suggestions
+    "twine>=6.0.0", # Package verification for CI build
 ]
 
 [tool.uv.workspace]
