--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -214,7 +214,7 @@ jobs:
         
     - name: Test wheel installation
       run: |
-        python -m venv test-env
+        python3.13 -m venv test-env
         source test-env/bin/activate
         pip install dist/*.whl
         devhub --version
@@ -222,7 +222,7 @@ jobs:
         
     - name: Test source installation
       run: |
-        python -m venv test-source-env
+        python3.13 -m venv test-source-env
         source test-source-env/bin/activate
         pip install dist/*.tar.gz
         devhub --version
