--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -128,7 +128,7 @@ jobs:
         
     - name: Test wheel installation
       run: |
-        python3.13 -m venv test-env
+        uv venv test-env --python 3.13
         source test-env/bin/activate
         pip install dist/*.whl
         devhub --version
@@ -136,7 +136,7 @@ jobs:
         
     - name: Test source installation
       run: |
-        python3.13 -m venv test-source-env
+        uv venv test-source-env --python 3.13
         source test-source-env/bin/activate
         pip install dist/*.tar.gz
         devhub --version
