Fix pip using wrong Python version in virtual environment
- Change 'pip install' to 'python -m pip install' for explicit venv usage
- Add debugging output (python --version, which python) to verify correct Python
- Ensures pip uses the virtual environment's Python 3.13, not system Python 3.12.3
- Fixes 'Package devhub requires a different Python: 3.12.3 not in >=3.13' error

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -130,7 +130,9 @@ jobs:
       run: |
         uv venv test-env --python 3.13
         source test-env/bin/activate
-        pip install dist/*.whl
+        python --version
+        which python
+        python -m pip install dist/*.whl
         devhub --version
         devhub --help
         
@@ -138,7 +140,9 @@ jobs:
       run: |
         uv venv test-source-env --python 3.13
         source test-source-env/bin/activate
-        pip install dist/*.tar.gz
+        python --version
+        which python
+        python -m pip install dist/*.tar.gz
         devhub --version
         devhub --help
         
