--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -132,7 +132,7 @@ jobs:
         source test-env/bin/activate
         python --version
         which python
-        python -m pip install dist/*.whl
+        uv pip install dist/*.whl
         devhub --version
         devhub --help
         
@@ -142,7 +142,7 @@ jobs:
         source test-source-env/bin/activate
         python --version
         which python
-        python -m pip install dist/*.tar.gz
+        uv pip install dist/*.tar.gz
         devhub --version
         devhub --help
         
